Add tests and sql

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -52,8 +53,11 @@
     "codecov": "^3.8.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "fs-extra": "^10.0.0",
     "jest": "^27.4.7",
+    "jest-mock-console": "^1.2.3",
     "jest-ts-tsx-resolver": "^1.0.0",
+    "nanoid": "^3.2.0",
     "np": "^7.6.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
