Create queries with sql builder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
+    "downlevelIteration": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
