--- a/package.json
+++ b/package.json
@@ -28,19 +28,16 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --watch",
     "codecov": "codecov",
+    "dev": "tsup src/index.ts --format esm,cjs --watch",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "yarn build && np",
     "test": "yarn lint && jest --coverage",
     "test:run": "jest",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
-  },
-  "peerDependencies": {
-    "better-sqlite3": "^7.4.6",
-    "zod": "^3.11.6"
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {},
   "devDependencies": {
@@ -65,6 +62,10 @@
     "tslib": "^2.3.1",
     "tsup": "^5.11.11",
     "typescript": "^4.5.4",
+    "zod": "^3.11.6"
+  },
+  "peerDependencies": {
+    "better-sqlite3": "^7.4.6",
     "zod": "^3.11.6"
   },
   "publishConfig": {
