--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "dev": "tsup src/index.ts --format esm,cjs --watch",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
-    "release": "yarn build && np",
-    "test": "yarn lint && jest --coverage",
+    "release": "yarn run build && np",
+    "test": "yarn run lint && jest --coverage",
     "test:run": "jest",
     "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit",
@@ -44,24 +44,24 @@
     "@types/better-sqlite3": "^7.4.2",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "better-sqlite3": "^7.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "better-sqlite3": "^7.5.0",
     "codecov": "^3.8.3",
-    "eslint": "^8.6.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-mock-console": "^1.2.3",
     "jest-ts-tsx-resolver": "^1.0.0",
     "nanoid": "^3.2.0",
     "np": "^7.6.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "tsup": "^5.11.11",
-    "typescript": "^4.5.4",
+    "tsup": "^5.11.13",
+    "typescript": "^4.5.5",
     "zod": "^3.11.6"
   },
   "peerDependencies": {
