--- a/package.json
+++ b/package.json
@@ -34,34 +34,38 @@
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "yarn run build && np",
     "test": "yarn run lint && jest --coverage",
+    "example:run": "esr ./example/index.ts",
     "test:run": "jest",
     "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "zensqlite": "^1.7.0"
+  },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.4.2",
+    "@types/better-sqlite3": "^7.5.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "better-sqlite3": "^7.5.0",
     "codecov": "^3.8.3",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "fs-extra": "^10.0.0",
+    "esbuild": "^0.14.27",
+    "esbuild-runner": "^2.2.1",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "fs-extra": "^10.0.1",
     "jest": "^27.5.1",
     "jest-mock-console": "^1.2.3",
-    "nanoid": "^3.2.0",
+    "nanoid": "^3.3.1",
     "np": "^7.6.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "tsup": "^5.11.13",
-    "typescript": "^4.5.5",
-    "zod": "^3.11.6"
+    "tsup": "^5.12.1",
+    "typescript": "^4.6.2"
   },
   "peerDependencies": {
     "better-sqlite3": "^7.4.6",
