--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint:fix": "prettier . --write . && eslint . --fix",
     "release": "yarn build && np",
     "test": "yarn lint && jest --coverage",
-    "test:run": "jest",
+    "test:run": "jest --coverage",
     "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit"
   },
