--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zendb",
-  "version": "4.1.0",
+  "version": "5.0.0-0",
   "description": "Type safe SQLite",
   "keywords": [],
   "homepage": "https://github.com/etienne-dldc/zendb#readme",
