--- a/package.json
+++ b/package.json
@@ -37,24 +37,23 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "nanoid": "^3.3.4",
     "zensqlite": "^1.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "denoify": "^0.11.0",
-    "eslint": "^8.15.0",
+    "@swc/core": "^1.3.24",
+    "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^28.1.0",
-    "np": "^7.6.1",
-    "prettier": "^2.6.2",
+    "jest": "^29.3.1",
+    "np": "^7.6.2",
+    "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.2",
-    "tslib": "^2.4.0",
-    "tsup": "^5.12.7",
-    "typescript": "^4.6.4"
+    "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public",
