--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "test": "yarn lint && jest --coverage",
     "test:run": "jest --coverage",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
-    "zensqlite": "^1.9.0"
+    "zensqlite": "^2.0.0-2"
   },
   "devDependencies": {
     "@swc/core": "^1.3.24",
