--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
   "devDependencies": {
     "@swc/core": "^1.3.24",
     "@types/better-sqlite3": "^7.6.3",
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^29.2.4",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "better-sqlite3": "^8.0.1",
+    "dedent": "^0.7.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.3.1",
     "np": "^7.6.2",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
+    "sql-formatter": "^12.1.0",
     "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
     "tsup": "^6.5.0",
