--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "exports": {
     ".": {
       "import": "./dist/mod.mjs",
-      "require": "./dist/mod.js"
+      "require": "./dist/mod.js",
+      "types": "./dist/mod.d.ts"
     }
   },
   "main": "./dist/mod.js",
