--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "tsup": "^6.6.2",
     "typescript": "^4.9.5"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
