--- a/package.json
+++ b/package.json
@@ -31,42 +31,55 @@
     "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
-    "release": "yarn build && np",
-    "test": "yarn lint && jest --coverage",
-    "test:run": "jest --coverage",
-    "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit",
-    "typecheck:watch": "tsc --noEmit --watch"
+    "release": "release-it",
+    "test": "pnpm run lint && vitest run --coverage",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "typecheck": "tsc",
+    "typecheck:watch": "tsc --watch"
   },
   "dependencies": {
     "zensqlite": "^2.0.0-7"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.62",
     "@types/better-sqlite3": "^7.6.4",
     "@types/dedent": "^0.7.0",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@vitest/coverage-v8": "^0.32.0",
     "better-sqlite3": "^8.4.0",
     "dedent": "^0.7.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
-    "jest": "^29.5.0",
-    "np": "^8.0.2",
     "prettier": "^2.8.8",
+    "release-it": "^15.11.0",
     "rimraf": "^5.0.1",
     "sql-formatter": "^12.2.1",
-    "ts-jest": "^29.1.0",
     "tslib": "^2.5.3",
     "tsup": "^6.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.0"
   },
-  "engines": {
-    "node": ">=16"
-  },
+  "packageManager": "pnpm@8.6.1",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "release-it": {
+    "hooks": {
+      "before:init": [
+        "pnpm run build",
+        "pnpm test"
+      ]
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true,
+      "web": true,
+      "autoGenerate": true
+    }
   }
 }
