--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "include": ["src", "tests"],
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "module": "ES2020",
-    "lib": ["esnext"],
+    "lib": ["ESNext"],
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
@@ -13,15 +14,13 @@
     "noEmit": true,
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
-    "downlevelIteration": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
-  },
-  "include": ["src", "tests"]
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
 }
