--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "zendb",
+  "name": "@dldc/zendb",
   "version": "5.0.0-18",
   "description": "Type safe SQLite",
   "keywords": [],
-  "homepage": "https://github.com/etienne-dldc/zendb#readme",
+  "homepage": "https://github.com/dldc-packages/zendb#readme",
   "bugs": {
-    "url": "https://github.com/etienne-dldc/zendb/issues"
+    "url": "https://github.com/dldc-packages/zendb/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/etienne-dldc/zendb.git"
+    "url": "git+https://github.com/dldc-packages/zendb.git"
   },
   "license": "MIT",
   "author": "Etienne Dldc <e.deladonchamps@gmail.com>",
