--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dldc/zendb",
-  "version": "5.0.0-18",
+  "version": "5.0.0",
   "description": "Type safe SQLite",
   "keywords": [],
   "homepage": "https://github.com/dldc-packages/zendb#readme",
