--- a/package.json
+++ b/package.json
@@ -40,6 +40,46 @@
     "typecheck": "tsc",
     "typecheck:watch": "tsc --watch"
   },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "useTabs": false
+  },
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": true,
+      "warnOnUnsupportedTypeScriptVersion": false
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "plugin:@typescript-eslint/recommended-type-checked",
+      "prettier"
+    ],
+    "rules": {
+      "no-constant-condition": "off",
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/consistent-type-imports": "error",
+      "@typescript-eslint/no-base-to-string": "off",
+      "@typescript-eslint/no-empty-function": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-inferrable-types": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
+      "@typescript-eslint/no-redundant-type-constituents": "off",
+      "@typescript-eslint/no-this-alias": "off",
+      "@typescript-eslint/no-unsafe-argument": "off",
+      "@typescript-eslint/no-unsafe-assignment": "off",
+      "@typescript-eslint/no-unsafe-call": "off",
+      "@typescript-eslint/no-unsafe-member-access": "off",
+      "@typescript-eslint/no-unsafe-return": "off",
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/unbound-method": "off"
+    },
+    "root": true
+  },
   "dependencies": {
     "@dldc/erreur": "^4.0.1",
     "@dldc/sqlite": "^2.0.3"
@@ -68,6 +108,15 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "dldc": {
+    "additionalDevDependencies": [
+      "@types/better-sqlite3",
+      "better-sqlite3",
+      "@types/dedent",
+      "dedent",
+      "sql-formatter"
+    ]
   },
   "release-it": {
     "hooks": {
