--- a/package.json
+++ b/package.json
@@ -41,100 +41,32 @@
     "typecheck": "tsc",
     "typecheck:watch": "tsc --watch"
   },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "useTabs": false
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": true,
-      "warnOnUnsupportedTypeScriptVersion": false
-    },
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "plugin:@typescript-eslint/recommended-type-checked",
-      "prettier"
-    ],
-    "rules": {
-      "no-constant-condition": "off",
-      "@typescript-eslint/ban-types": "off",
-      "@typescript-eslint/consistent-type-imports": "error",
-      "@typescript-eslint/no-base-to-string": "off",
-      "@typescript-eslint/no-empty-function": "off",
-      "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-inferrable-types": "off",
-      "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/no-redundant-type-constituents": "off",
-      "@typescript-eslint/no-this-alias": "off",
-      "@typescript-eslint/no-unsafe-argument": "off",
-      "@typescript-eslint/no-unsafe-assignment": "off",
-      "@typescript-eslint/no-unsafe-call": "off",
-      "@typescript-eslint/no-unsafe-member-access": "off",
-      "@typescript-eslint/no-unsafe-return": "off",
-      "@typescript-eslint/no-unused-vars": "off",
-      "@typescript-eslint/unbound-method": "off"
-    },
-    "root": true
-  },
   "dependencies": {
     "@dldc/erreur": "^7.1.0",
     "@dldc/sqlite": "^2.0.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/better-sqlite3": "^7.6.10",
     "@types/dedent": "^0.7.2",
     "@types/node": "^20.12.8",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "@vitest/coverage-v8": "^1.5.3",
+    "@vitest/coverage-v8": "^1.6.0",
     "auto-changelog": "^2.4.0",
     "better-sqlite3": "^9.6.0",
     "dedent": "^1.5.3",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "release-it": "^17.2.1",
     "rimraf": "^5.0.5",
     "sql-formatter": "^15.3.1",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.3"
+    "typescript-eslint": "^7.8.0",
+    "vitest": "^1.6.0"
   },
   "packageManager": "pnpm@9.0.6",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "dldc": {
-    "additionalDevDependencies": [
-      "@types/better-sqlite3",
-      "better-sqlite3",
-      "@types/dedent",
-      "dedent",
-      "sql-formatter"
-    ]
-  },
-  "release-it": {
-    "hooks": {
-      "before:init": [
-        "pnpm run build",
-        "pnpm test"
-      ]
-    },
-    "npm": {
-      "publish": true
-    },
-    "git": {
-      "changelog": "pnpm run --silent changelog"
-    },
-    "github": {
-      "release": true,
-      "web": true
-    }
   }
 }
