--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@dldc/zendb",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "exports": "./mod.ts",
   "imports": {
     "@db/sqlite": "jsr:@db/sqlite@^0.11.1",
@@ -18,7 +18,13 @@
     "check": "deno fmt --check . && deno lint . && deno task test:run"
   },
   "lint": {
-    "rules": { "exclude": ["no-explicit-any"] }
+    "rules": {
+      "exclude": [
+        "no-explicit-any"
+      ]
+    }
   },
-  "exclude": ["tests/data"]
+  "exclude": [
+    "tests/data"
+  ]
 }
