--- a/deno.json
+++ b/deno.json
@@ -10,9 +10,11 @@
     "dedent": "npm:dedent@^1.5.3",
     "sql-formatter": "npm:sql-formatter@^15.3.1"
   },
+  "unstable": ["ffi"],
   "tasks": {
-    "test:run": "deno test -A --unstable-ffi",
-    "test:watch": "deno test -A --unstable-ffi --watch",
+    "test:run": "deno test -A",
+    "test:watch": "deno test -A --watch",
+    "test:coverage": "deno test -A --coverage && deno coverage coverage --html",
     "bump": "deno run -A jsr:@mys/bump@1",
     "update": "deno run -A jsr:@molt/cli deno.json",
     "update:commit": "deno task -q update --commit deno.json",
