--- a/deno.json
+++ b/deno.json
@@ -5,22 +5,22 @@
   "imports": {
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@dldc/erreur": "jsr:@dldc/erreur@^7.1.1",
-    "@dldc/sqlite": "jsr:@dldc/sqlite@^3.1.0",
-    "@std/expect": "jsr:@std/expect@^1.0.13",
+    "@dldc/sqlite": "jsr:@dldc/sqlite@^3.1.1",
+    "@std/expect": "jsr:@std/expect@^1.0.14",
     "dedent": "npm:dedent@^1.5.3",
-    "sql-formatter": "npm:sql-formatter@^15.4.11"
+    "sql-formatter": "npm:sql-formatter@^15.5.2"
   },
   "unstable": [
     "ffi"
   ],
   "tasks": {
-    "test:run": "deno test -A",
+    "test": "deno test -A",
     "test:watch": "deno test -A --watch",
-    "test:coverage": "deno test -A --coverage && deno coverage coverage --html",
     "bump": "deno run -A jsr:@mys/bump@1",
     "deps:outdated": "deno outdated",
     "deps:update": "deno outdated --update --latest --interactive",
-    "check": "deno fmt --check . && deno lint . && deno task test:run"
+    "check": "deno fmt --check . && deno lint . && deno check **/*.ts && deno task test",
+    "test:coverage": "deno test -A --coverage=coverage && deno coverage coverage --html"
   },
   "lint": {
     "rules": {
