--- a/deno.json
+++ b/deno.json
@@ -6,15 +6,15 @@
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@dldc/erreur": "jsr:@dldc/erreur@^7.1.1",
     "@dldc/sqlite": "jsr:@dldc/sqlite@^3.1.1",
-    "@std/expect": "jsr:@std/expect@^1.0.14",
-    "dedent": "npm:dedent@^1.5.3",
-    "sql-formatter": "npm:sql-formatter@^15.5.2"
+    "@std/expect": "jsr:@std/expect@^1.0.17",
+    "dedent": "npm:dedent@^1.7.0",
+    "sql-formatter": "npm:sql-formatter@^15.6.8"
   },
   "unstable": [
     "ffi"
   ],
   "tasks": {
-    "test": "deno test -A",
+    "test:run": "deno test -A",
     "test:watch": "deno test -A --watch",
     "bump": "deno run -A jsr:@mys/bump@1",
     "deps:outdated": "deno outdated",
