--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@dldc/erreur": "jsr:@dldc/erreur@^7.1.1",
     "@dldc/sqlite": "jsr:@dldc/sqlite@^3.1.1",
+    "@std/assert": "jsr:@std/assert@^1.0.14",
     "@std/expect": "jsr:@std/expect@^1.0.17",
     "dedent": "npm:dedent@^1.7.0",
     "sql-formatter": "npm:sql-formatter@^15.6.8"
